[package]
name = "templr"
version = "0.1.0"
description = "A rust template library"
documentation = "https://docs.rs/templr"
keywords = ["markup", "template", "html", "rsx"]
categories = ["template-engine"]
homepage = "https://github.com/PizzasBear/templr"
repository = "https://github.com/PizzasBear/templr"
license = "Apache-2.0"
workspace = ".."
readme = "../README.md"
edition = "2021"

[dependencies]
templr_macros = { path = "../templr_macros", version = "0.1" }
anyhow = "1.0"
askama_escape = "0.10"
