[package]
name = "templr"
version = "0.1.3"
description = "A rust template library"
documentation = "https://docs.rs/templr"
keywords = ["markup", "template", "html", "rsx"]
categories = ["template-engine"]
homepage = "https://github.com/PizzasBear/templr"
repository = "https://github.com/PizzasBear/templr"
license = "Apache-2.0"
workspace = ".."
readme = "../README.md"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[dependencies]
templr_macros = { path = "../templr_macros", version = "0.1.1" }
anyhow = "1.0"
askama_escape = "0.10"

axum-core = { version = "0.4", optional = true }
http = { version = "1.0", optional = true }
actix-web = { version = "4", default-features = false, optional = true }
hyper = { version = "1.0", default-features = false, optional = true }
warp = { version = "0.3", default-features = false, optional = true }
tide = { version = "0.16", default-features = false, optional = true }
gotham = { version = "0.7", default-features = false, optional = true }
rocket = { version = "0.5", default-features = false, optional = true }
salvo_core = { version = "0.64", default-features = false, optional = true }

[features]
default = []
axum = ["dep:axum-core", "dep:http"]
actix-web = ["dep:actix-web"]
hyper = ["dep:hyper"]
warp = ["dep:warp"]
tide = ["dep:tide"]
gotham = ["dep:gotham"]
rocket = ["dep:rocket"]
salvo = ["dep:salvo_core"]
