[package]
name = "templr_macros"
version = "0.2.0"
description = "Procedural macros for templr"
homepage = "https://github.com/PizzasBear/templr"
repository = "https://github.com/PizzasBear/templr"
license = "Apache-2.0"
workspace = ".."
readme = "../README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
askama_escape = "0.10"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
templr_parser = { path = "../templr_parser", version = "0.1.2" }

[dev-dependencies]
templr = { path = "../templr/" }
