[package]
name = "templr_parser"
version = "0.2.1"
description = "Parser for templr templates"
documentation = "https://docs.rs/templr_parser"
keywords = ["markup", "template", "html", "rsx"]
categories = ["template-engine"]
homepage = "https://github.com/PizzasBear/templr"
repository = "https://github.com/PizzasBear/templr"
license = "Apache-2.0"
workspace = ".."
readme = "../README.md"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
